--- a/client/templates/common.html
+++ b/client/templates/common.html
@@ -25,6 +25,9 @@
                 <span class="glyphicon glyphicon-align-justify"></span>
             </button>
         </div>
+        <div class="btn-group pull-right" role="group" aria-label="...">
+            <button type="button" class="btn btn-default">Ok</button>
+        </div>
     </div>
 </template>
 
