--- a/client/templates/common.html
+++ b/client/templates/common.html
@@ -9,7 +9,7 @@
   <p>No selection</p>
 </template>
 
-<template name=""detailTools">
+<template name="detailTools">
   {{#if editMode}}
      {{> detailEditToolbar }}
   {{else}}
