--- a/client/templates/common.html
+++ b/client/templates/common.html
@@ -6,7 +6,7 @@
 </template>
 
 <template name="noSelection">
-  <p>No selection</p>
+  <p id="noSelection">No selection</p>
 </template>
 
 <template name="detailTools">
@@ -22,10 +22,10 @@
 </template>
 
 <template name="detailToolbar">
-    <button type="button" class="btn btn-default">Ok</button>
+    <button type="button" class="btn btn-default">Edit</button>
 </template>
 
 <template name="detailEditToolbar">
-    <button type="button" class="btn btn-default">Ok</button>
+    <button type="button" class="btn btn-default">Save</button>
     <button type="button" class="btn btn-default">Cancel</button>
 </template>
