--- a/client/css/main.css
+++ b/client/css/main.css
@@ -1,5 +1,6 @@
 
 
+
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
@@ -35,9 +36,19 @@ body {
     float: left;
 }
 
-#form1 {
+
+
+#descriptionBlock
+{
     top: 30px;
     position:relative;
+}
+
+#form2 {
+  padding-top: 40px;  
+    width: 100%;
+  position:relative;
+
 }
 
 #detailColumn {
@@ -48,4 +59,53 @@ body {
     float: right;
 }
 
+#noSelection {
+  padding-top: 0px;
+}
 
+#description {
+  resize: vertical;
+}
+
+#descriptionBlock {
+  background-color: white;
+}
+
+/* ==========================================================================
+   Expander
+   ========================================================================== */
+
+#expander {
+  position: relative;
+  padding-bottom: 40px;
+  z-index: 100;
+}
+
+
+
+#expander > hr {
+  position: absolute;
+  border-color: black ;
+  width: 100%;
+  top: -10px;
+  z-index: 1;
+}
+
+#expander > button {
+  z-index: 1000;
+  position: absolute;
+  background-color: white;
+  padding-right: 5px;
+  padding-left: 5px;
+  border: none;
+}
+
+
+#expander > button:hover   {
+  color: blue;
+}
+
+#expander > button:hover, button:focus   {
+  border: none;
+  outline: 0;
+}
