--- a/client/templates/description.html
+++ b/client/templates/description.html
@@ -1,8 +1,8 @@
 <template name = "description">
   <!-- Expander -->
-  <div id="descriptionBlock" >
-    {{> expander}}
-    <form id="form1" class="form-horizontal collapse in">
+  <div class="expandableBlock" >
+    {{> expander title="Description"}}
+    <form class="form-horizontal collapse in">
       <!-- Name -->
       <div class="form-group" >
         <label class="control-label col-sm-2">Name</label>
