--- a/client/templates/dataObject.html
+++ b/client/templates/dataObject.html
@@ -1,5 +1,5 @@
 <template name = "dataObject">
     {{> description}}
     {{> description}}
-    {{> description}}
+    {{> properties}}
 </template>
